--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
 		  
 		  <img src="me.jpg" style="width:145px;height:200px;"/>
 		
-          <p style="">周鹏，男，安徽省枞阳县人。硕士毕业后曾在某大型软件公司担任系统架构师多年。2018年毕业于合肥工业大学软件工程专业，获得工学博士学位。随后加入安徽大学计算机科学与技术学院，主要从事在线学习、特征选择、动态聚类和异常检测等方向的研究工作。目前主持国家自然科学基金青年项目一项，参与国家自然科学基金项目多项。在IEEE TNNLS、ACM TKDD、INS、PR、KBS等国际期刊和会议发表论文多篇，同时担任IEEE TNNLS、ACM TKDD、KBS、DMKD等多个国际知名期刊审稿人
+                  <p style="">
+		  周鹏，男，安徽省枞阳县人。硕士毕业后曾在某大型软件公司担任系统架构师多年。2018年毕业于合肥工业大学软件工程专业，获得工学博士学位。
+		  随后加入安徽大学计算机科学与技术学院，主要从事在线学习、特征选择、动态聚类和异常检测等方向的研究工作。
+		  目前主持国家自然科学基金青年项目一项，参与国家自然科学基金项目多项。
+		  在IEEE TNNLS、ACM TKDD、INS、PR、KBS等国际期刊和会议发表论文多篇，同时担任IEEE TNNLS、ACM TKDD、KBS、DMKD等多个国际知名期刊审稿人。
 		  </p>
 		  
 		  <p>联系方式：<img src="email.png" style="width:200px;"></p>
