--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
 		  
           <h1><a name="posts" id="posts">RECENT POSTS</a></h1>
           <h2 style="font-size:22px;font-weight:bold;">New paper is coming!</h2>
-		  
+		   <div class="article-style">
+		       <a href="https://authors.elsevier.com/a/1jCvk4ZQEFh6P"  target="_blank">
+                       <strong><code>One Paper</code></strong> Explainable feature selection and ensemble classification via feature polarity </a>
+				 is Accepted by <em>Information Sciences</em></a> (29/05/2024)
+                  </div>
 		  <div class="article-style">
 		       <a href="https://ieeexplore.ieee.org/abstract/document/10382574"  target="_blank">
-                 <strong><code>One Paper</code></strong> Online Heterogeneous Streaming Feature Selection without Feature Type Information </a>
+                       <strong><code>One Paper</code></strong> Online Heterogeneous Streaming Feature Selection without Feature Type Information </a>
 				 is Accepted by <em>IEEE Transactions on Big Data</em></a> (08/01/2024)
-          </div>
+                  </div>
 		  <div class="article-style">
 		       <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417424000058"  target="_blank">
                  <strong><code>One Paper</code></strong> Unsupervised technical phrase extraction by incorporating structure and position information </a>
