--- a/index.html
+++ b/index.html
@@ -125,20 +125,32 @@
 		  
           <h1><a name="posts" id="posts">RECENT POSTS</a></h1>
           <h2 style="font-size:22px;font-weight:bold;">New paper is coming!</h2>
+
+		<div class="article-style">
+		       <a href="https://dl.acm.org/doi/10.1145/3678012"  target="_blank">
+                       <strong><code>One Paper</code></strong> Concept Evolution Detecting over Feature Streams </a>
+				 is Accepted by <em>ACM Transactions on Knowledge Discovery from Data</em></a> (2024-07-13)
+                  </div>
+		  <div class="article-style">
+		       <a href="https://link.springer.com/article/10.1007/s10489-024-05681-x"  target="_blank">
+                       <strong><code>One Paper</code></strong> Online learning from capricious data streams via shared and new feature spaces </a>
+				 is Accepted by <em>Applied Intelligence</em></a> (2024-07-16)
+                  </div>
+		
 		   <div class="article-style">
 		       <a href="https://authors.elsevier.com/a/1jCvk4ZQEFh6P"  target="_blank">
                        <strong><code>One Paper</code></strong> Explainable feature selection and ensemble classification via feature polarity </a>
-				 is Accepted by <em>Information Sciences</em></a> (29/05/2024)
+				 is Accepted by <em>Information Sciences</em></a> (2024-05-29)
                   </div>
 		  <div class="article-style">
 		       <a href="https://ieeexplore.ieee.org/abstract/document/10382574"  target="_blank">
                        <strong><code>One Paper</code></strong> Online Heterogeneous Streaming Feature Selection without Feature Type Information </a>
-				 is Accepted by <em>IEEE Transactions on Big Data</em></a> (08/01/2024)
+				 is Accepted by <em>IEEE Transactions on Big Data</em></a> (2024-01-08)
                   </div>
 		  <div class="article-style">
 		       <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417424000058"  target="_blank">
                  <strong><code>One Paper</code></strong> Unsupervised technical phrase extraction by incorporating structure and position information </a>
-				 is Accepted by <em>Expert Systems with Applications</em></a> (01/07/2024)
+				 is Accepted by <em>Expert Systems with Applications</em></a> (2024-01-07)
           </div>
 		  
 	  
