--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
 		<h1><a name="service" id="service">PROFESSIONAL SERVICES</a></h1>
 		<p class="paper-year"><i class="am-icon-user"></i> Journal Reviewer</p>
 		<ul>
+			<li>IEEE Transactions on Knowledge and Data Engineering</li>
 			<li>IEEE Transactions on Neural Networks and Learning Systems</li>
 			<li>ACM Transactions on Knowledge Discovery from Data</li>
 			<li>IEEE Transactions on Big Data</li>
@@ -276,7 +277,9 @@
 			<li>IEEE Transactions on Emerging Topics in Computational Intelligence</li>
 			<li>IEEE Transactions on Fuzzy Systems</li>
 			<li>WIREs Data Mining and Knowledge Discovery</li>
+			<li>Information Sciences</li>
 			<li>Knowledge-Based Systems</li>
+			<li>Expert Systems with Applications</li>
 			<li>Engineering Applications of Artificial Intelligence</li>
 		</ul>
 		
