--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 			<a class="am-btn am-btn-success am-round" href="publications/2024/202401.bib" target="_blank" rel="noopener"> CITE</a>
 
 			<p><i class="am-icon-file-text"></i>  Peng Zhou, Xin Jiang, Shu Zhao. Unsupervised technical phrase extraction by incorporating structure and position information. Expert Systems with Applications, 245:123140, 2024. </p>
-			<a class="am-btn am-btn-success am-round" href="publications/2024/online learning from capricious data streams via shared and new feature spaces.pdf" target="_blank" rel="noopener"> PDF</a>
+			<a class="am-btn am-btn-success am-round" href="publications/2024/Unsupervised technical phrase extraction by incorporating structure and position information.pdf" target="_blank" rel="noopener"> PDF</a>
 			<a class="am-btn am-btn-success am-round" href="publications/2024/202403.bib" target="_blank" rel="noopener"> CITE</a>
 
 		        <p><i class="am-icon-file-text"></i> Peng Zhou, Shuai Zhang, Lin Mu, Yuanting Yan. Online learning from capricious data streams via shared and new feature spaces. Applied Intelligence, 54:9429-9445, 2024. </p>
-			<a class="am-btn am-btn-success am-round" href="publications/2024/Online Heterogeneous Streaming Feature Selection without Feature Type Information.pdf" target="_blank" rel="noopener"> PDF</a>
+			<a class="am-btn am-btn-success am-round" href="publications/2024/online learning from capricious data streams via shared and new feature spaces.pdf" target="_blank" rel="noopener"> PDF</a>
 			<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Steam-Learning/tree/main/Online%20learning%20from%20capricious%20data%20streams%20via%20shared%20and%20new%20feature%20spaces" target="_blank" rel="noopener"> CODE</a>
 			<a class="am-btn am-btn-success am-round" href="publications/2024/202405.bib" target="_blank" rel="noopener"> CITE</a>
 	        
