--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 		
 		<p><i class="am-icon-file-text"></i> Peng Zhou, Qi Wang, Yunyun Zhang, Zhaolong Ling, Xindong Wu.  Online Stable Streaming Feature Selection via Feature Aggregation, ACM Transactions on Knowledge Discovery from Data, 19(3):65, 2025. </p>
 		<a class="am-btn am-btn-success am-round" href="https://doi.org/10.1145/3715918" target="_blank" rel="noopener"> PDF</a>
-		%<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Steam-Learning/tree/main/Concept%20Evolution%20Detecting%20over%20Feature%20Streams" target="_blank" rel="noopener"> CODE</a>
+		<!--<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Steam-Learning/tree/main/Concept%20Evolution%20Detecting%20over%20Feature%20Streams" target="_blank" rel="noopener"> CODE</a>-->
 		<a class="am-btn am-btn-success am-round" href="publications/2025/202501.bib" target="_blank" rel="noopener"> CITE</a>
 
 		
 		<p><i class="am-icon-file-text"></i> Peng Zhou, Qihui Tong, Shiji Chen, Yunyun Zhang, Xindong Wu. EACE: Explain Anomaly via Counterfactual Explanations, Pattern Recognition, 164:111532, 2025. </p>
 		<a class="am-btn am-btn-success am-round" href="https://doi.org/10.1016/j.patcog.2025.111532" target="_blank" rel="noopener"> PDF</a>
-		%<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Interpretable-Machine-Learning/tree/main/EACE%3A%20Enhancing%20Anomaly%20Detection%20Interpretability%20via%20Counterfactual%20Explanations" target="_blank" rel="noopener"> CODE</a>
+		<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Interpretable-Machine-Learning/tree/main/EACE%3A%20Enhancing%20Anomaly%20Detection%20Interpretability%20via%20Counterfactual%20Explanations" target="_blank" rel="noopener"> CODE</a>
 		<a class="am-btn am-btn-success am-round" href="publications/2025/202502.bib" target="_blank" rel="noopener"> CITE</a>
 		
           </div>
