--- a/index.html
+++ b/index.html
@@ -126,8 +126,13 @@
           <h1><a name="posts" id="posts">RECENT POSTS</a></h1>
           <h2 style="font-size:22px;font-weight:bold;">New paper is coming!</h2>
 
+          <p><i class="am-icon-file-text"></i> Peng Zhou, Huiqi Deng, Yunyun Zhang, Zhaolong Ling, Xindong Wu. Online Distributed Heterogeneous Streaming Feature Selection, ACM Transactions on Intelligent Systems and Technology ( Early Access ), DOI: https://dl.acm.org/doi/10.1145/3767722, 2025. </p>
+		  <a class="am-btn am-btn-success am-round" href="https://dl.acm.org/doi/10.1145/3767722" target="_blank" rel="noopener"> PDF</a>
+		  <a class="am-btn am-btn-success am-round" href="publications/2025/202505.bib" target="_blank" rel="noopener"> CITE</a>
+			
 		  <p><i class="am-icon-file-text"></i> Peng Zhou, Haoran Yu, Yuanting Yan, Xindong Wu. Density-Based Online Concept Evolution Detection in Streaming Features, IEEE Transactions on Emerging Topics in Computational Intelligence ( Early Access ), DOI: 10.1109/TETCI.2025.3597301, 2025. </p>
 		  <a class="am-btn am-btn-success am-round" href="https://ieeexplore.ieee.org/document/11131298" target="_blank" rel="noopener"> PDF</a>
+		  <a class="am-btn am-btn-success am-round" href="publications/2025/202504.bib" target="_blank" rel="noopener"> CITE</a>
 		  
 
 		  <p><i class="am-icon-file-text"></i> Peng Zhou, QianChen Chen, Lei Sang, Shu Zhao, Xindong Wu. Unsupervised heterogeneous group streaming feature selection, Pattern Recognition, 171(B):112280, 2025. </p>
