--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
           <p><i class="am-icon-file-text"></i> Peng Zhou, Huiqi Deng, Yunyun Zhang, Zhaolong Ling, Xindong Wu. Online Distributed Heterogeneous Streaming Feature Selection, ACM Transactions on Intelligent Systems and Technology ( Early Access ), DOI: https://dl.acm.org/doi/10.1145/3767722, 2025. </p>
 		  <a class="am-btn am-btn-success am-round" href="https://dl.acm.org/doi/10.1145/3767722" target="_blank" rel="noopener"> PDF</a>
+			<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Online%20Distributed%20Heterogeneous%20Streaming%20Feature%20Selection" target="_blank" rel="noopener"> CODE</a>
 		  <a class="am-btn am-btn-success am-round" href="publications/2025/202505.bib" target="_blank" rel="noopener"> CITE</a>
 			
 		  <p><i class="am-icon-file-text"></i> Peng Zhou, Haoran Yu, Yuanting Yan, Xindong Wu. Density-Based Online Concept Evolution Detection in Streaming Features, IEEE Transactions on Emerging Topics in Computational Intelligence ( Early Access ), DOI: 10.1109/TETCI.2025.3597301, 2025. </p>
