--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
 		  <p><i class="am-icon-file-text"></i> Peng Zhou, QianChen Chen, Lei Sang, Shu Zhao, Xindong Wu. Unsupervised heterogeneous group streaming feature selection, Pattern Recognition, 171(B):112280, 2025. </p>
 		  <a class="am-btn am-btn-success am-round" href="https://authors.elsevier.com/c/1leLr77nKsB02" target="_blank" rel="noopener"> PDF</a>
+		  <a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Unsupervised%20heterogeneous%20group%20streaming%20feature%20selection" target="_blank" rel="noopener"> CODE</a>
 		  <a class="am-btn am-btn-success am-round" href="publications/2025/202503.bib" target="_blank" rel="noopener"> CITE</a>
 		
 		<p><i class="am-icon-file-text"></i> Peng Zhou, Qi Wang, Yunyun Zhang, Zhaolong Ling, Xindong Wu.  Online Stable Streaming Feature Selection via Feature Aggregation, ACM Transactions on Knowledge Discovery from Data, 19(3):65, 2025. </p>
