--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<p class="paper-year">2025</p>	
           <p><i class="am-icon-file-text"></i> Peng Zhou, Huiqi Deng, Yunyun Zhang, Zhaolong Ling, Xindong Wu. Online Distributed Heterogeneous Streaming Feature Selection, ACM Transactions on Intelligent Systems and Technology, 16(6):131, 2025. </p>
 		  <a class="am-btn am-btn-success am-round" href="https://dl.acm.org/doi/10.1145/3767722" target="_blank" rel="noopener"> PDF</a>
-			<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Online%20Distributed%20Heterogeneous%20Streaming%20Feature%20Selection" target="_blank" rel="noopener"> CODE</a>
+		  <a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Online%20Distributed%20Heterogeneous%20Streaming%20Feature%20Selection" target="_blank" rel="noopener"> CODE</a>
 		  <a class="am-btn am-btn-success am-round" href="publications/2025/202505.bib" target="_blank" rel="noopener"> CITE</a>
 			
 		  <p><i class="am-icon-file-text"></i> Peng Zhou, Haoran Yu, Yuanting Yan, Xindong Wu. Density-Based Online Concept Evolution Detection in Streaming Features, IEEE Transactions on Emerging Topics in Computational Intelligence ( Early Access ), DOI: 10.1109/TETCI.2025.3597301, 2025. </p>
@@ -153,10 +153,10 @@
 		  <a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Unsupervised%20heterogeneous%20group%20streaming%20feature%20selection" target="_blank" rel="noopener"> CODE</a>
 		  <a class="am-btn am-btn-success am-round" href="publications/2025/202503.bib" target="_blank" rel="noopener"> CITE</a>
 		
-		<p><i class="am-icon-file-text"></i> Peng Zhou, Qi Wang, Yunyun Zhang, Zhaolong Ling, Xindong Wu.  Online Stable Streaming Feature Selection via Feature Aggregation, ACM Transactions on Knowledge Discovery from Data, 19(3):65, 2025. </p>
-		<a class="am-btn am-btn-success am-round" href="https://doi.org/10.1145/3715918" target="_blank" rel="noopener"> PDF</a>
-		<!--<a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/Steam-Learning/tree/main/Concept%20Evolution%20Detecting%20over%20Feature%20Streams" target="_blank" rel="noopener"> CODE</a>-->
-		<a class="am-btn am-btn-success am-round" href="publications/2025/202501.bib" target="_blank" rel="noopener"> CITE</a>
+		  <p><i class="am-icon-file-text"></i> Peng Zhou, Qi Wang, Yunyun Zhang, Zhaolong Ling, Xindong Wu.  Online Stable Streaming Feature Selection via Feature Aggregation, ACM Transactions on Knowledge Discovery from Data, 19(3):65, 2025. </p>
+		  <a class="am-btn am-btn-success am-round" href="https://doi.org/10.1145/3715918" target="_blank" rel="noopener"> PDF</a>
+		  <a class="am-btn am-btn-success am-round" href="https://github.com/doodzhou/OSFS/tree/master/Online%20Stable%20Streaming%20Feature%20Selection%20via%20Feature%20Aggregation" target="_blank" rel="noopener"> CODE</a>
+		  <a class="am-btn am-btn-success am-round" href="publications/2025/202501.bib" target="_blank" rel="noopener"> CITE</a>
 
 		
 		<p><i class="am-icon-file-text"></i> Peng Zhou, Qihui Tong, Shiji Chen, Yunyun Zhang, Xindong Wu. EACE: Explain Anomaly via Counterfactual Explanations, Pattern Recognition, 164:111532, 2025. </p>
